components/policies-rd/rings/ring-0/base/delete-propagate-cost-management-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-cost-management-labels
$patch: delete
